@@ -603,6 +603,7 @@ fully support the editing toolbar, but was found to be too confusing.
 * (bug 4828) Fix genitive month-name variable for cs, pl, uk
 * (bug 4842) Fix 'show number of watching users' with enhanced RC
 * (bug 4889) Fix image talk namespace for Tamil
+* (bug 4147) Added cleanupWatchlist.php to clear out bogus watchlist entries
 
 
 === Caveats ===
